<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.DebugModeActivity">

    <TextView
        android:id="@+id/sdktitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modetitle"
        android:textColor="#cc1f212a"
        android:textSize="25sp" />

    <Button
        android:id="@+id/sdk_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/authentication_button"
        android:text="@string/sdkinit"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/sdk_pre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/authentication_button"
        android:text="@string/preInitNum"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/sdk_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/authentication_button"
        android:text="@string/authpage"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/sdk_disp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/authentication_button"
        android:text="@string/displacePhone"
        android:textColor="#ffffff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e2e2e2"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/check_message_init"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/check_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/clean"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="清理"
                    android:textSize="13sp"
                    />
                <Button
                    android:id="@+id/copy"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:text="复制"
                    android:textSize="13sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>